// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StarRating should render 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <StarRating
    onSelect={[MockFunction]}
    rating={3}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[Function]}
          style={
            Object {
              "marginHorizontal": 10,
            }
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../assets/feedback/starActive.png",
              }
            }
          />
        </TouchableOpacity>,
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[Function]}
          style={
            Object {
              "marginHorizontal": 10,
            }
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../assets/feedback/starActive.png",
              }
            }
          />
        </TouchableOpacity>,
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[Function]}
          style={
            Object {
              "marginHorizontal": 10,
            }
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../assets/feedback/starActive.png",
              }
            }
          />
        </TouchableOpacity>,
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[Function]}
          style={
            Object {
              "marginHorizontal": 10,
            }
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../assets/feedback/starInactive.png",
              }
            }
          />
        </TouchableOpacity>,
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[Function]}
          style={
            Object {
              "marginHorizontal": 10,
            }
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../assets/feedback/starInactive.png",
              }
            }
          />
        </TouchableOpacity>,
      ],
      "style": Object {
        "flexDirection": "row",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "0",
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": <Image
            source={
              Object {
                "testUri": "../../../assets/feedback/starActive.png",
              }
            }
          />,
          "onPress": [Function],
          "style": Object {
            "marginHorizontal": 10,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "source": Object {
              "testUri": "../../../assets/feedback/starActive.png",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "1",
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": <Image
            source={
              Object {
                "testUri": "../../../assets/feedback/starActive.png",
              }
            }
          />,
          "onPress": [Function],
          "style": Object {
            "marginHorizontal": 10,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "source": Object {
              "testUri": "../../../assets/feedback/starActive.png",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "2",
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": <Image
            source={
              Object {
                "testUri": "../../../assets/feedback/starActive.png",
              }
            }
          />,
          "onPress": [Function],
          "style": Object {
            "marginHorizontal": 10,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "source": Object {
              "testUri": "../../../assets/feedback/starActive.png",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "3",
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": <Image
            source={
              Object {
                "testUri": "../../../assets/feedback/starInactive.png",
              }
            }
          />,
          "onPress": [Function],
          "style": Object {
            "marginHorizontal": 10,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "source": Object {
              "testUri": "../../../assets/feedback/starInactive.png",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "4",
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": <Image
            source={
              Object {
                "testUri": "../../../assets/feedback/starInactive.png",
              }
            }
          />,
          "onPress": [Function],
          "style": Object {
            "marginHorizontal": 10,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "source": Object {
              "testUri": "../../../assets/feedback/starInactive.png",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
            style={
              Object {
                "marginHorizontal": 10,
              }
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../assets/feedback/starActive.png",
                }
              }
            />
          </TouchableOpacity>,
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
            style={
              Object {
                "marginHorizontal": 10,
              }
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../assets/feedback/starActive.png",
                }
              }
            />
          </TouchableOpacity>,
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
            style={
              Object {
                "marginHorizontal": 10,
              }
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../assets/feedback/starActive.png",
                }
              }
            />
          </TouchableOpacity>,
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
            style={
              Object {
                "marginHorizontal": 10,
              }
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../assets/feedback/starInactive.png",
                }
              }
            />
          </TouchableOpacity>,
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
            style={
              Object {
                "marginHorizontal": 10,
              }
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../assets/feedback/starInactive.png",
                }
              }
            />
          </TouchableOpacity>,
        ],
        "style": Object {
          "flexDirection": "row",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "0",
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 0.2,
            "children": <Image
              source={
                Object {
                  "testUri": "../../../assets/feedback/starActive.png",
                }
              }
            />,
            "onPress": [Function],
            "style": Object {
              "marginHorizontal": 10,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "source": Object {
                "testUri": "../../../assets/feedback/starActive.png",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "1",
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 0.2,
            "children": <Image
              source={
                Object {
                  "testUri": "../../../assets/feedback/starActive.png",
                }
              }
            />,
            "onPress": [Function],
            "style": Object {
              "marginHorizontal": 10,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "source": Object {
                "testUri": "../../../assets/feedback/starActive.png",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "2",
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 0.2,
            "children": <Image
              source={
                Object {
                  "testUri": "../../../assets/feedback/starActive.png",
                }
              }
            />,
            "onPress": [Function],
            "style": Object {
              "marginHorizontal": 10,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "source": Object {
                "testUri": "../../../assets/feedback/starActive.png",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "3",
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 0.2,
            "children": <Image
              source={
                Object {
                  "testUri": "../../../assets/feedback/starInactive.png",
                }
              }
            />,
            "onPress": [Function],
            "style": Object {
              "marginHorizontal": 10,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "source": Object {
                "testUri": "../../../assets/feedback/starInactive.png",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "4",
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 0.2,
            "children": <Image
              source={
                Object {
                  "testUri": "../../../assets/feedback/starInactive.png",
                }
              }
            />,
            "onPress": [Function],
            "style": Object {
              "marginHorizontal": 10,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "source": Object {
                "testUri": "../../../assets/feedback/starInactive.png",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`StarRating should render with 5 yellow stars 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <StarRating
    onSelect={[MockFunction]}
    rating={5}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[Function]}
          style={
            Object {
              "marginHorizontal": 10,
            }
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../assets/feedback/starActive.png",
              }
            }
          />
        </TouchableOpacity>,
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[Function]}
          style={
            Object {
              "marginHorizontal": 10,
            }
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../assets/feedback/starActive.png",
              }
            }
          />
        </TouchableOpacity>,
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[Function]}
          style={
            Object {
              "marginHorizontal": 10,
            }
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../assets/feedback/starActive.png",
              }
            }
          />
        </TouchableOpacity>,
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[Function]}
          style={
            Object {
              "marginHorizontal": 10,
            }
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../assets/feedback/starActive.png",
              }
            }
          />
        </TouchableOpacity>,
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[Function]}
          style={
            Object {
              "marginHorizontal": 10,
            }
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../assets/feedback/starActive.png",
              }
            }
          />
        </TouchableOpacity>,
      ],
      "style": Object {
        "flexDirection": "row",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "0",
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": <Image
            source={
              Object {
                "testUri": "../../../assets/feedback/starActive.png",
              }
            }
          />,
          "onPress": [Function],
          "style": Object {
            "marginHorizontal": 10,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "source": Object {
              "testUri": "../../../assets/feedback/starActive.png",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "1",
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": <Image
            source={
              Object {
                "testUri": "../../../assets/feedback/starActive.png",
              }
            }
          />,
          "onPress": [Function],
          "style": Object {
            "marginHorizontal": 10,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "source": Object {
              "testUri": "../../../assets/feedback/starActive.png",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "2",
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": <Image
            source={
              Object {
                "testUri": "../../../assets/feedback/starActive.png",
              }
            }
          />,
          "onPress": [Function],
          "style": Object {
            "marginHorizontal": 10,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "source": Object {
              "testUri": "../../../assets/feedback/starActive.png",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "3",
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": <Image
            source={
              Object {
                "testUri": "../../../assets/feedback/starActive.png",
              }
            }
          />,
          "onPress": [Function],
          "style": Object {
            "marginHorizontal": 10,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "source": Object {
              "testUri": "../../../assets/feedback/starActive.png",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "4",
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": <Image
            source={
              Object {
                "testUri": "../../../assets/feedback/starActive.png",
              }
            }
          />,
          "onPress": [Function],
          "style": Object {
            "marginHorizontal": 10,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "source": Object {
              "testUri": "../../../assets/feedback/starActive.png",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
            style={
              Object {
                "marginHorizontal": 10,
              }
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../assets/feedback/starActive.png",
                }
              }
            />
          </TouchableOpacity>,
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
            style={
              Object {
                "marginHorizontal": 10,
              }
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../assets/feedback/starActive.png",
                }
              }
            />
          </TouchableOpacity>,
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
            style={
              Object {
                "marginHorizontal": 10,
              }
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../assets/feedback/starActive.png",
                }
              }
            />
          </TouchableOpacity>,
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
            style={
              Object {
                "marginHorizontal": 10,
              }
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../assets/feedback/starActive.png",
                }
              }
            />
          </TouchableOpacity>,
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
            style={
              Object {
                "marginHorizontal": 10,
              }
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../assets/feedback/starActive.png",
                }
              }
            />
          </TouchableOpacity>,
        ],
        "style": Object {
          "flexDirection": "row",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "0",
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 0.2,
            "children": <Image
              source={
                Object {
                  "testUri": "../../../assets/feedback/starActive.png",
                }
              }
            />,
            "onPress": [Function],
            "style": Object {
              "marginHorizontal": 10,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "source": Object {
                "testUri": "../../../assets/feedback/starActive.png",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "1",
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 0.2,
            "children": <Image
              source={
                Object {
                  "testUri": "../../../assets/feedback/starActive.png",
                }
              }
            />,
            "onPress": [Function],
            "style": Object {
              "marginHorizontal": 10,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "source": Object {
                "testUri": "../../../assets/feedback/starActive.png",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "2",
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 0.2,
            "children": <Image
              source={
                Object {
                  "testUri": "../../../assets/feedback/starActive.png",
                }
              }
            />,
            "onPress": [Function],
            "style": Object {
              "marginHorizontal": 10,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "source": Object {
                "testUri": "../../../assets/feedback/starActive.png",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "3",
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 0.2,
            "children": <Image
              source={
                Object {
                  "testUri": "../../../assets/feedback/starActive.png",
                }
              }
            />,
            "onPress": [Function],
            "style": Object {
              "marginHorizontal": 10,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "source": Object {
                "testUri": "../../../assets/feedback/starActive.png",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "4",
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 0.2,
            "children": <Image
              source={
                Object {
                  "testUri": "../../../assets/feedback/starActive.png",
                }
              }
            />,
            "onPress": [Function],
            "style": Object {
              "marginHorizontal": 10,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "source": Object {
                "testUri": "../../../assets/feedback/starActive.png",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
